[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["yeromenko <mikhail.yeromenko@vilmate.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
